--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -2,13 +2,14 @@
 #
 # Table name: posts
 #
-#  id         :integer          not null, primary key
-#  content    :text
-#  title      :string(255)
-#  user_id    :integer
-#  created_at :datetime
-#  updated_at :datetime
-#  image      :string(255)
+#  id             :integer          not null, primary key
+#  content        :text
+#  title          :string(255)
+#  user_id        :integer
+#  created_at     :datetime
+#  updated_at     :datetime
+#  image          :string(255)
+#  comments_count :integer          default(0)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
