add simple navigation and friendly_id

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -17,6 +17,8 @@
 #  updated_at             :datetime
 #  avatar                 :string(255)
 #  posts_count            :integer          default(0)
+#  nickname               :string(255)
+#  slug                   :string(255)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
