--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -10,6 +10,7 @@
 #  updated_at     :datetime
 #  image          :string(255)
 #  comments_count :integer          default(0)
+#  slug           :string(255)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
